--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "dist"
   ],
   "dependencies": {
+    "@element-plus/icons-vue": "^0.2.4",
     "element-plus": "^1.2.0-beta.5",
     "semver": "^7.3.5",
     "vue": "^3.2.16"
